/*
 * Copyright 2018 Mycos authors.
 */

 syntax = "proto3";

 package mycos.essembly.susu;

 // SusuRequest is the request for echo.
 message SusuRequest {
   string message = 1;
 }

 // SusuResponse is the response for echo.
 message SusuResponse {
   string message = 1;
 }

 // Susu is the echo service.
 service Susu {
   // UnarySusu is unary echo.
   rpc UnarySusu(SusuRequest) returns (SusuResponse) {}
   // ServerStreamingSusu is server side streaming.
   rpc ServerStreamingSusu(SusuRequest) returns (stream SusuResponse) {}
   // ClientStreamingSusu is client side streaming.
   rpc ClientStreamingSusu(stream SusuRequest) returns (SusuResponse) {}
   // BidirectionalStreamingSusu is bidi streaming.
   rpc BidirectionalStreamingSusu(stream SusuRequest) returns (stream SusuResponse) {}
 }
